Updated to require (and no longer crash with) Fabric Loader 0.12+